--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,10 @@
 }
 
 body {
-  background: #E5E5E5;
-  background-image: url("bg.jpg");
+  /* background: #E5E5E5; */
+  /* background-image: url("bg.jpg"); */
+  margin: 26%;
+  background: linear-gradient(#2980b9, #2c3e50);
 }
 
 #card-front {
@@ -93,8 +95,8 @@ p.signed {
 
 #card-front {
   background-color: #ee9ca7;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#FF5555), to(#FF7777));
-  background-image: linear-gradient(top, #FF5555 0%, #FF7777 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#283593), to(#03A9F4));
+  background-image: linear-gradient(top, #283593 0%, #03A9F4 100%);
   -webkit-transform-origin: left;
           transform-origin: left;
   -webkit-transition: -webkit-transform 1s linear;
@@ -379,15 +381,16 @@ font-family: 'Lobster', cursive;
 
 .polaroid {
   width: 240x;
-  height: 220px;
+  height: 380px;
   position: absolute;
   float: left;
-  background: #1e1c18;
+  background: #1e1c1840;
   border: 7px solid #f5f5f5;
   border-bottom: 50px solid #f5f5f5;
   -webkit-box-shadow: 0 0 6px -1px #000;
           box-shadow: 0 0 6px -1px #000;
   overflow: hidden;
+  top: 0px;
   left: 0;
   right: 0;
   margin: auto;
